--- a/docroot/sites/all/themes/custom/nas/scss/modules/_video-page-2.scss
+++ b/docroot/sites/all/themes/custom/nas/scss/modules/_video-page-2.scss
@@ -355,6 +355,9 @@ $white: #fff;
           display: none;
         }
       }
+      .slick-list {
+        overflow: visible;
+      }
       &::after {
         content: '';
         opacity: 0;
